--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,9 @@
       </dependency>
 
 
+
+
+
   </dependencies>
 
 
@@ -115,6 +118,12 @@
                     <suiteXmlFiles>
                         <suiteXmlFile>testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
+
+                    <systemPropertyVariables>
+                        <browser>${Browser}</browser>
+                    </systemPropertyVariables>
+
+
                 </configuration>
             </plugin>
 
